# Social-Network

./: .gitignore  README.md  pyproject.toml  requirements.txt
accounts/: models.py  serializers.py  views.py
accounts/migrations/: 0001_initial.py
deploy/: Dockerfile-base  nginx.conf  uwsgi.ini
friendship/: admin.py  models.py  serializers.py  urls.py  views.py
friendship/migrations/: 0001_initial.py
posts/: admin.py  models.py  serializers.py  urls.py  views.py
posts/migrations/: 0001_initial.py
social_network/: local_settings.py.example  settings.py  urls.py
